# claude_memory_system

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.json.template
hooks/: _shared.py  pre-compact.py  session-end.py  session-start.py
knowledge/: log.md
scripts/: compile.py  config.py  flush.py  lint.py  utils.py
