[project]
name = "claude-memory-system"
version = "1.0.0"
description = "Persistent memory system for Claude Code - automatically captures, compiles, and retrieves knowledge from AI coding sessions"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 100
